--- a/app/views/addressInfos.html
+++ b/app/views/addressInfos.html
@@ -1,8 +1,6 @@
 <div class="container" style="padding-top: 10px;">
 
-    <h1><i class="fa fa-code"></i> Ethereum Address
-        <small>View information about an Ethereum Address</small>
-    </h1>
+    <h1>IoT Data Blockchain Address</h1>
 <hr>
     <div id="address" class="blockdiv">
       <div style="font-size: 32px; font-weight: lighter; margin-bottom: 15px; display: inline-block;" align="center"> {{ addressId }}</div><br /><br />
@@ -12,7 +10,7 @@
             </tr>
             <tr>
                 <td>Current Balance</td>
-                <td><span style="font-size: 24px; font-weight: lighter;">{{ balance }} ETH</span></td>
+                <td><span style="font-size: 24px; font-weight: lighter;">{{ balance }} LDBC</span></td>
             </tr>
             <tr>
                 <td>Transaction Count <em>(# of outgoing TXs)</em></td>
