--- a/app/views/chainInfos.html
+++ b/app/views/chainInfos.html
@@ -1,8 +1,6 @@
 <div class="container" style="padding-top: 10px;">
 
-    <h1><i class="fa fa-server"></i> Ethereum Information
-        <small>View information about the Ethereum Blockchain</small>
-    </h1>
+    <h1>IoT Data Blockchain Information</h1>
     <div id="chain" class="blockdiv">
         <table class="table table-striped">
             <tbody><tr>
@@ -48,7 +46,7 @@
                 <td>{{ time }}</td>
             </tr>
             <tr>
-                <td>Connected to ETH Network</td>
+                <td>Connected to LDBC Network</td>
                 <td>{{ isConnected }}</td>
             </tr>
             <tr>
