--- a/app/views/blockInfos.html
+++ b/app/views/blockInfos.html
@@ -1,6 +1,6 @@
 <div class="container" style="padding-top: 10px;">
 
-  <div class="boxi" style="clear:both;">View information about Ethereum <i class="fa fa-cube"></i> Block {{number}}</div>
+  <div class="boxi" style="clear:both;">Information about IoT Data Blockchain Block {{number}}</div>
 
   <div id="block" class="blockdiv">
     <div style="padding-bottom:30px;width:100%;text-align:right;clear:both">
@@ -128,7 +128,7 @@
         </tr>
         <tr>
           <td>Value</td>
-          <td>{{tx.value}} ETH</td>
+          <td>{{tx.value}} LDBC</td>
         </tr>
       </tbody>
     </table>
