--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
     </form></div></div>
 </div>
 <div class="container" style="padding-top: 20px;">
-  <h1><i class="fa fa-cubes"></i> Recent Blocks <small>Most Recent Blocks in the Ethereum Network</small></h1><br />
+  <h1><i class="fa fa-cubes"></i> Recent Blocks <small>Most Recent Blocks in the IoT Data Network</small></h1><br />
   <div class="table-responsive">
     <table class="table table-striped table-hover table-bordered">
         <thead class="thead-inverse">
@@ -52,7 +52,7 @@
         </tbody>
     </table>
   </div>
-    <h1><i class="fa fa-exchange"></i> Recent Transactions <small>Transactions in the Ethereum Network</small></h1><br />
+    <h1><i class="fa fa-exchange"></i> Recent Transactions <small>Transactions in the IoT Data Network</small></h1><br />
     <div class="table-responsive">
     <table class="table table-striped table-hover table-bordered">
         <thead class="thead-inverse">
