--- a/app/views/transactionInfos.html
+++ b/app/views/transactionInfos.html
@@ -1,8 +1,6 @@
 <div class="container" style="padding-top:5px;">
 
-    <h1><i class="fa fa-exchange"></i> Transaction
-        <small>View information about an Ethereum transaction</small>
-    </h1>
+    <h1>View information about an transaction</h1>
 
     <div id="tx-97785883" class="txdiv">
       <div class="table-responsive">
@@ -22,7 +20,7 @@
                 <td style="text-align:center;vertical-align:middle;">
                     <a href="./#/address/{{to}}">{{to}}</a>
                     <span class="pull-right">
-                        <span>{{ethValue}} ETH</span>
+                        <span>{{ethValue}} LDBC</span>
                     </span>
                     <br>
                 </td>
@@ -32,7 +30,7 @@
       </div>
         <div style="padding-bottom:30px;width:100%;text-align:right;clear:both">   <!--TODO no style tags...-->
             <button class="btn btn-primary">{{conf}} Confirmations</button>
-            <button class="btn btn-success cb"><span>{{ethValue}} ETH</span></button>
+            <button class="btn btn-success cb"><span>{{ethValue}} LDBC</span></button>
         </div>
         <div class="table-responsive">
         <table class="table table-striped">
